[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "habit-tracker-cli"
version = "0.1.0"
description = "Terminal habit tracker with encrypted SQLite storage, streak tracking, and weekly summaries"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["habit", "tracker", "cli", "terminal", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
habit = "habit_tracker.cli:main"

[project.urls]
Homepage = "https://github.com/RedBeret/habit-tracker-cli"
Repository = "https://github.com/RedBeret/habit-tracker-cli"
Issues = "https://github.com/RedBeret/habit-tracker-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["habit_tracker"]
omit = ["tests/*"]
